# Bignum-Arithmetic

./: CMakeLists.txt  Fraction.cpp  Fraction.h  Integer.cpp  Integer.h  Natural.cpp  Natural.h  Polynomial.cpp  Polynomial.h  main.cpp
src/: main.cpp
src/CLI/: CLI.cpp
src/CLI/include/: CLI.h
src/Numbers/: Fraction.cpp  Integer.cpp  Natural.cpp  Polynomial.cpp
src/Numbers/include/: Fraction.h  Integer.h  Natural.h  Polynomial.h
